update name to pokemon-search

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "starting-react",
+  "name": "pokemon-search",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jeneara.github.io/starting-react",
+  "homepage": "https://jeneara.github.io/pokemon-search",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
